# pytorch-workbooks

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/: 00_pytorch_fundamentals.py  01_pytorch_workflow.py  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb
src/exercises/: 00_pytorch_fundamentals_exercises.ipynb  00_pytorch_fundamentals_exercises.py  01_pytorch_workflow_exercises.ipynb  02_pytorch_classification_exercises.ipynb  03_pytorch_computer_vision_exercises.ipynb
src/models/: 01_pytorch_workflow_model_ex.pth  03_pytorch_computer_vision_cnn.pth
