[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "numpy==2.4.3",
    "pandas>=3.0.2",
    "pandas-stubs~=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "torch==2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision==0.26.0",
    "tqdm>=4.67.3",
]
